WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44017
XSLTProcessor.transformToFragment should not pass contextElement to the parser (since there is no context)
https://bugs.webkit.org/show_bug.cgi?id=44017
Summary
XSLTProcessor.transformToFragment should not pass contextElement to the parse...
Eric Seidel (no email)
Reported
2010-08-14 16:00:33 PDT
XSLTProcessor.transformToFragment should not pass contextElement
Attachments
Patch
(3.17 KB, patch)
2010-08-14 16:02 PDT
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2010-08-14 16:02:50 PDT
Created
attachment 64432
[details]
Patch
Adam Barth
Comment 2
2010-08-14 16:08:53 PDT
Comment on
attachment 64432
[details]
Patch WebCore/xml/XSLTProcessor.cpp:103 + fragment->parseHTML(sourceString, 0); I don't get this part of the change. Who passes a non-zero argument?
Adam Barth
Comment 3
2010-08-14 16:11:42 PDT
Comment on
attachment 64432
[details]
Patch Thanks for explaining on IRC. We should probably have two methods with different names since they're semantically different.
Eric Seidel (no email)
Comment 4
2010-08-14 16:13:27 PDT
the contextElement is an optional parameter to the parse (at least in HTML5). The Xml parser should work similarly.
WebKit Commit Bot
Comment 5
2010-08-14 16:30:03 PDT
Comment on
attachment 64432
[details]
Patch Clearing flags on attachment: 64432 Committed
r65375
: <
http://trac.webkit.org/changeset/65375
>
WebKit Commit Bot
Comment 6
2010-08-14 16:30:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug